# istor-box

./: .env.dist  .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs  providers.rs  services.rs  use_cases.rs
src/entities/: story.rs
src/providers/: local_story_provider.rs  remote_story_provider.rs
src/providers/local_story_provider/: implementation.rs
src/providers/remote_story_provider/: implementation.rs
src/services/: teller.rs
src/use_cases/: play_story.rs
